--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -140,7 +140,9 @@
           </div>
         </div>
       </div>
-      <div class="col-12 md:col-12 lg:col-4" *ngIf="!isPasswordAccepted">
+      <div
+        class="col-12 md:col-12 lg:col-4"
+        *ngIf="!isPasswordAccepted && isAdmin">
         <h5>Sales Report Password</h5>
         <div class="grid">
           <div class="col-8">
@@ -166,7 +168,9 @@
           </div>
         </div>
       </div>
-      <div class="col-4 lg:col-offset-8 text-end" *ngIf="isPasswordAccepted">
+      <div
+        class="col-4 lg:col-offset-8 text-end"
+        *ngIf="isPasswordAccepted && isAdmin">
         <p-button
           label="Hide Sales"
           icon="pi pi-minus"
