--- a/src/app/pages/email-verify/email-verify.component.html
+++ b/src/app/pages/email-verify/email-verify.component.html
@@ -1,6 +1,7 @@
 <app-topbar></app-topbar>
 <div
-  class="surface-0 flex align-items-center justify-content-center min-h-screen min-w-screen overflow-hidden">
+  class="surface-0 flex align-items-center justify-content-center min-h-screen min-w-screen overflow-hidden"
+  *ngIf="showVerified">
   <div class="grid justify-content-center p-2 lg:p-0" style="min-width: 80%">
     <div class="col-12 mt-5 xl:mt-0 text-center">
       <!-- <img src="assets/demo/images/notfound/logo-blue.svg" alt="Sakai logo" class="mb-5" style="width:81px; height:60px;"> -->
