fix login responsiveness

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,7 +1,7 @@
 <section
-  class="login-section vh-100 bg-login"
+  class="login-section vh-lg-100 bg-login"
   *ngIf="isVerified && !isSubmitted">
-  <div class="container mt-6">
+  <div class="container mt-lg-5">
     <div class="row justify-content-center">
       <div class="col-md-12 col-lg-8">
         <div class="wrap d-md-flex">
