--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,5 +1,5 @@
-<section class="login-section vh-100 bg-login">
-  <div class="container mt-6">
+<section class="login-section vh-lg-100 bg-login">
+  <div class="container mt-lg-5">
     <div class="row justify-content-center">
       <div class="col-md-12 col-lg-12">
         <div class="wrap d-md-flex justify-content-center">
