--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -17,9 +17,6 @@
   /* Set up proportionate scaling */
   width: 100%;
   height: auto;
-
-  /* Set up positioning */
-  position: fixed;
   top: 0;
   left: 0;
 }
@@ -43,8 +40,14 @@ input[type='reset'].btn-block,
 input[type='button'].btn-block {
   width: 100%;
 }
-.login-section {
-  padding: 10.25em 0;
+@media (min-width: 992px) {
+  .login-section {
+    padding: 10.25em 0;
+  }
+
+  .vh-lg-100 {
+    height: 100vh !important;
+  }
 }
 .wrap {
   width: 100%;
