--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -22,8 +22,13 @@
                   <div class="p-inputgroup">
                     <small
                       class="text-danger"
-                      *ngIf="validateControl('firstname')">
+                      *ngIf="(f['firstname'].touched || submitted) && f['firstname'].errors?.['required']">
                       FirstName is required
+                    </small>
+                    <small
+                      class="text-danger"
+                      *ngIf="(f['firstname'].touched || submitted) && f['firstname'].errors?.['pattern']">
+                      Firstname is invalid
                     </small>
                   </div>
                 </div>
@@ -40,6 +45,11 @@
                       class="text-danger"
                       *ngIf="(f['lastname'].touched || submitted) && f['lastname'].errors?.['required']">
                       LastName is required
+                    </small>
+                    <small
+                      class="text-danger"
+                      *ngIf="(f['lastname'].touched || submitted) && f['lastname'].errors?.['pattern']">
+                      Firstname is invalid
                     </small>
                   </div>
                 </div>
@@ -58,6 +68,11 @@
                       class="text-danger"
                       *ngIf="(f['email'].touched || submitted) && f['email'].errors?.['required']">
                       Email is required
+                    </small>
+                    <small
+                      class="text-danger"
+                      *ngIf="(f['email'].touched || submitted) && f['email'].errors?.['email']">
+                      Email is invalid
                     </small>
                   </div>
                 </div>
