update username field label

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -14,7 +14,7 @@
             </div>
             <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
               <div class="form-group mb-4 mt-3">
-                <label for="float-input">Username</label>
+                <label for="float-input">Email</label>
                 <input
                   type="text"
                   pInputText
