update lastname error message

--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -49,7 +49,7 @@
                     <small
                       class="text-danger"
                       *ngIf="(f['lastname'].touched || submitted) && f['lastname'].errors?.['pattern']">
-                      Firstname is invalid
+                      LastName is invalid
                     </small>
                   </div>
                 </div>
