--- a/src/app/pages/admin/appointment-list/appointment-list.component.html
+++ b/src/app/pages/admin/appointment-list/appointment-list.component.html
@@ -41,11 +41,12 @@
             selectedAppointment.medCert &&
             selectedAppointment.medCert !== undefined
           ">
-          <img
+          <p-image
+            styleClass="m-2 shadow-4"
             [src]="'data:image/jpg;base64,' + selectedAppointment.medCert"
             [alt]="selectedAppointment.name"
-            width="100"
-            class="shadow-4" />
+            width="250"
+            [preview]="true"></p-image>
         </p>
         <ng-template pTemplate="footer">
           <p-button
@@ -176,8 +177,9 @@
       </p-dialog>
       <p-toolbar styleClass="mb-4">
         <ng-template pTemplate="left">
-          <div class="grid">
-            <div class="field col-12 md:col-6 lg:col-3 dashboard">
+          <div class="grid w-100">
+            <div class="field col-12 md:col-6 lg:col-4 dashboard">
+              <label>Keyword</label>
               <input
                 pInputText
                 type="text"
@@ -185,42 +187,46 @@
                 placeholder="Search keyword" />
             </div>
             <div class="field col-12 md:col-6 lg:col-3 dashboard">
-              <p-calendar
-                [(ngModel)]="rangeDates"
-                selectionMode="range"
-                [readonlyInput]="true"
-                inputId="range"
-                [showIcon]="true"></p-calendar>
-            </div>
-            <div class="field col-12 md:col-6 lg:col-3 dashboard">
+              <label>Status</label>
               <p-dropdown
                 [options]="status"
                 [(ngModel)]="selectedStatus"></p-dropdown>
             </div>
             <div class="field col-12 md:col-6 lg:col-3 dashboard">
-              <p-button
-                label="Apply Filter"
-                icon="pi pi-search"
-                (onClick)="applyFilter()"></p-button>
+              <label *ngIf="!isAnnual">Date Range</label>
+              <p-calendar
+                [(ngModel)]="rangeDates"
+                selectionMode="range"
+                [readonlyInput]="true"
+                inputId="range"
+                [numberOfMonths]="2"
+                *ngIf="!isAnnual"
+                [showClear]="true"></p-calendar>
+              <label *ngIf="isAnnual">Year</label>
+              <p-calendar
+                [(ngModel)]="year"
+                view="year"
+                dateFormat="yy"
+                inputId="yearpicker"
+                *ngIf="isAnnual"></p-calendar>
+            </div>
+            <div
+              class="field col-12 md:col-6 lg:col-2 dashboard align-content-end">
+              <div class="field-checkbox">
+                <p-checkbox
+                  [(ngModel)]="isAnnual"
+                  [binary]="true"
+                  inputId="binary"></p-checkbox>
+                <label for="binary">Annual</label>
+              </div>
             </div>
           </div>
         </ng-template>
         <ng-template pTemplate="right">
-          <button
-            pButton
-            pRipple
-            label="New"
-            icon="pi pi-plus"
-            class="p-button-info"
-            (click)="addNew()"
-            *ngIf="isAdmin"></button>
-          <a
-            pButton
-            pRipple
-            label="Make Appointment"
-            class="p-button-info"
-            *ngIf="!isAdmin"
-            routerLink="/appointment"></a>
+          <p-button
+            label="Apply Filter"
+            icon="pi pi-search"
+            (onClick)="applyFilter()"></p-button>
         </ng-template>
       </p-toolbar>
       <p-table
@@ -233,6 +239,28 @@
         [paginator]="true"
         [totalRecords]="totalRecords"
         [rowsPerPageOptions]="[10, 25, 50]">
+        <ng-template pTemplate="caption">
+          <div class="grid">
+            <div
+              class="col-12 lg:col-2 md:col-4 lg:col-offset-10 md:col-offset-8">
+              <button
+                pButton
+                pRipple
+                label="New"
+                icon="pi pi-plus"
+                class="p-button-info"
+                (click)="addNew()"
+                *ngIf="isAdmin"></button>
+              <a
+                pButton
+                pRipple
+                label="Make Appointment"
+                class="p-button-info"
+                *ngIf="!isAdmin"
+                routerLink="/appointment"></a>
+            </div>
+          </div>
+        </ng-template>
         <ng-template pTemplate="header">
           <tr>
             <th>Transaction Id</th>
@@ -241,6 +269,7 @@
             <th>Service Availed</th>
             <th>Appointment Schedule</th>
             <th>Appointment Type</th>
+            <th>Patient Type</th>
             <th>Payment Type</th>
             <th>Payment Status</th>
             <th>Status</th>
@@ -261,6 +290,7 @@
               {{ appointment.appointmentTimeLabel }}
             </td>
             <td>{{ appointment.isWalkIn ? 'Walk-in' : 'Online' }}</td>
+            <td>{{ getPatienType(appointment) }}</td>
             <td>{{ appointment.paymentMethod === 1 ? 'Paypal' : 'Cash' }}</td>
             <td>
               {{
@@ -301,7 +331,10 @@
                 class="p-button-rounded p-button-text p-button-secondary"
                 (click)="done(appointment)"></button>
               <button
-                *ngIf="appointment.status === 'Pending' || appointment.status === 'Approved'"
+                *ngIf="
+                  appointment.status === 'Pending' ||
+                  appointment.status === 'Approved'
+                "
                 title="Reschedule"
                 pButton
                 pRipple
