update search placeholder

--- a/src/app/pages/admin/appointment-list/appointment-list.component.html
+++ b/src/app/pages/admin/appointment-list/appointment-list.component.html
@@ -184,7 +184,7 @@
                 pInputText
                 type="text"
                 [(ngModel)]="filter"
-                placeholder="Search keyword" />
+                placeholder="Transaction#/Name/Service/Email" />
             </div>
             <div class="field col-12 md:col-6 lg:col-3 dashboard">
               <label>Status</label>
