--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -9,10 +9,16 @@
           <div class="login-wrap p-4 p-lg-5">
             <div class="d-flex">
               <div class="w-100">
-                <h3 class="mb-2 text-center">Sign In</h3>
+                <h3 class="mb-2 text-center" *ngIf="!showResetForm">Sign In</h3>
+                <h3 class="mb-2 text-center" *ngIf="showResetForm">
+                  Forgot Password
+                </h3>
               </div>
             </div>
-            <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+            <form
+              [formGroup]="loginForm"
+              (ngSubmit)="onSubmit()"
+              *ngIf="!showResetForm">
               <div class="form-group mb-4 mt-3">
                 <label for="float-input">Email</label>
                 <input
@@ -25,7 +31,7 @@
                   <small
                     class="text-danger"
                     *ngIf="(f['username'].touched || submitted) && f['username'].errors?.['required']">
-                    Username is required
+                    Email is required
                   </small>
                 </div>
               </div>
@@ -66,6 +72,13 @@
                   LOGIN
                 </button>
               </div>
+              <div class="mt-1 ml-1">
+                <a
+                  class="cursor-pointer"
+                  (click)="showResetForm = !showResetForm"
+                  >Forgot Password</a
+                ><br />
+              </div>
               <div class="text-center mt-4">
                 Don't have an account?
                 <a class="text-muted" routerLink="/register">Sign up</a>
@@ -74,6 +87,38 @@
                 <a class="text-muted" routerLink="/">Home</a>
               </div>
               <div class="text-center mt-4"></div>
+            </form>
+            <form
+              [formGroup]="resetPassForm"
+              (ngSubmit)="resetPassword()"
+              *ngIf="showResetForm"
+              class="reset-form align-content-center">
+              <div class="form-group mb-4 mt-3">
+                <label for="float-input">Email</label>
+                <input
+                  type="text"
+                  pInputText
+                  formControlName="email"
+                  class="form-control form-control-lg" />
+
+                <div class="p-inputgroup">
+                  <small
+                    class="text-danger"
+                    *ngIf="(f['email'].touched || submitted) && f['email'].errors?.['required']">
+                    Email is required
+                  </small>
+                </div>
+              </div>
+              <div class="form-group">
+                <button
+                  [disabled]="loading"
+                  class="btn btn-login btn btn-primary btn-block">
+                  <span
+                    *ngIf="loading"
+                    class="spinner-border spinner-border-sm mr-1"></span>
+                  Reset Password
+                </button>
+              </div>
             </form>
           </div>
         </div>
