--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,7 +4,7 @@
   style="background-image: url('assets/img/hero-min.jpg')">
   <div class="container">
     <div class="row align-items-center justify-content-between">
-      <div class="col-lg-7 intro animate__animated animate__fadeInDown">
+      <div class="col-lg-7 animate__animated animate__fadeInDown">
         <h1 class="text-white fw-bold mb-4">Ocampo Dental Clinic</h1>
         <p class="text-white mb-4">
           With a strong commitment to patient satisfaction and oral health, Dr.
