--- a/src/app/pages/admin/users/user-form/user-form.component.html
+++ b/src/app/pages/admin/users/user-form/user-form.component.html
@@ -159,6 +159,15 @@
                 </div>
               </div>
             </div>
+            <div class="field col-12">
+              <label>Address</label>
+              <textarea
+                rows="5"
+                cols="30"
+                pInputTextarea
+                [autoResize]="true"
+                formControlName="address"></textarea>
+            </div>
           </div>
           <div class="p-formgrid grid">
             <div class="field col">
