--- a/src/app/pages/admin/users/users.component.html
+++ b/src/app/pages/admin/users/users.component.html
@@ -14,7 +14,7 @@
               pRipple
               label="New"
               icon="pi pi-plus"
-              class="p-button-info"
+              class="p-button-info w-10rem"
               (click)="addUser()"></button>
           </ng-template>
           <ng-template pTemplate="right">
