--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -140,6 +140,75 @@
           </div>
         </div>
       </div>
+      <div class="col-12 md:col-6 lg:col-6">
+        <div class="card mb-0 h-100">
+          <h3 class="mb-3">Service Breakdown</h3>
+          <p-chart
+            type="pie"
+            [data]="salesBreakdownData"
+            [options]="chartOption"
+            class="m-auto"
+            [style]="{ width: '100%' }"></p-chart>
+        </div>
+      </div>
+      <div class="col-12 md:col-6 lg:col-6">
+        <div class="card mb-0">
+          <p-toolbar styleClass="mb-4">
+            <div class="grid w-100">
+              <div class="field col-12 md:col-6 lg:col-6 dashboard">
+                <label *ngIf="!isPatientChartAnnual">Date Range</label>
+                <p-calendar
+                  [(ngModel)]="patientChartDate"
+                  selectionMode="range"
+                  [readonlyInput]="true"
+                  inputId="range"
+                  [showClear]="true"
+                  *ngIf="!isPatientChartAnnual"></p-calendar>
+                <label *ngIf="isPatientChartAnnual">Year</label>
+                <p-calendar
+                  [(ngModel)]="patientChartYear"
+                  view="year"
+                  dateFormat="yy"
+                  inputId="yearpicker"
+                  *ngIf="isPatientChartAnnual"></p-calendar>
+              </div>
+              <div
+                class="field col-12 md:col-6 lg:col-2 dashboard align-content-end">
+                <div class="field-checkbox">
+                  <p-checkbox
+                    [(ngModel)]="isPatientChartAnnual"
+                    [binary]="true"
+                    inputId="binary"></p-checkbox>
+                  <label for="binary">Annual</label>
+                </div>
+              </div>
+              <div
+                class="field col-12 md:col-6 lg:col-3 dashboard align-content-end">
+                <p-button
+                  label="Apply Filter"
+                  icon="pi pi-search"
+                  (onClick)="applyPatientChartFilter()"></p-button>
+              </div>
+            </div>
+          </p-toolbar>
+          <div class="grid">
+            <div class="col-12 md:col-8 lg:col-8">
+              <h3 class="mb-3">Patient Visits</h3>
+              <p-chart
+                type="pie"
+                [data]="patientData"
+                width="350px"
+                [options]="chartOption"></p-chart>
+            </div>
+            <div class="col-12 md:col-4 lg:col-4 align-content-center text-2xl">
+              <p>New Patient: {{ newPatientCount }}</p>
+              <p>Old Patient: {{ oldPatientCount }}</p>
+              <p>Total Visits: {{ newPatientCount + oldPatientCount }}</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-12"></div>
       <div
         class="col-12 md:col-12 lg:col-4"
         *ngIf="!isPasswordAccepted && isAdmin">
