export sales report to pdf

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -299,12 +299,12 @@
                 pButton
                 pRipple
                 type="button"
-                pTooltip="Export Excel"
+                pTooltip="Export PDF"
                 tooltipPosition="bottom"
                 label="Export"
-                icon="pi pi-file-excel"
-                class="p-button-success"
-                (click)="exportExcel()"></button>
+                icon="pi pi-file-pdf"
+                class="p-button-danger"
+                (click)="extractSalesReport()"></button>
             </ng-template>
           </p-toolbar>
           <p-table
