--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -9,8 +9,8 @@
         <p class="text-white mb-4">
           With a strong commitment to patient satisfaction and oral health, Dr.
           Ocampo ensures that every patient receives personalized care in a
-          welcoming and professional environment. As a licensed dentist (PRC
-          License No. 49342), she continues to stay at the forefront of dental
+          welcoming and professional environment. As a licensed dentist, 
+          she continues to stay at the forefront of dental
           advancements, providing top-notch treatment for her patients.
         </p>
         <a [routerLink]="'appointment'" class="appointment-btn py-3 px-4"
