--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -140,7 +140,7 @@
           </div>
         </div>
       </div>
-      <div class="col-12 md:col-6 lg:col-6">
+      <div class="col-12 md:col-6 lg:col-6" *ngIf="isAdmin">
         <div class="card mb-0 h-100">
           <h3 class="mb-3">Service Breakdown</h3>
           <p-chart
@@ -151,7 +151,7 @@
             [style]="{ width: '100%' }"></p-chart>
         </div>
       </div>
-      <div class="col-12 md:col-6 lg:col-6">
+      <div class="col-12 md:col-6 lg:col-6" *ngIf="isAdmin">
         <div class="card mb-0">
           <p-toolbar styleClass="mb-4">
             <div class="grid w-100">
@@ -389,6 +389,13 @@
                     icon="pi pi-eye"
                     class="p-button-rounded p-button-text p-button-secondary"
                     (click)="showDetails(item)"></button>
+                  <button
+                    title="Export"
+                    pButton
+                    pRipple
+                    icon="pi pi-download"
+                    class="p-button-rounded p-button-text p-button-info"
+                    (click)="exportPatientInfo(item)"></button>
                 </td>
               </tr>
             </ng-template>
