update topbar logo

--- a/src/app/shared/layout/topbar/topbar.component.html
+++ b/src/app/shared/layout/topbar/topbar.component.html
@@ -1,6 +1,10 @@
 <div class="layout-topbar">
   <a class="layout-topbar-logo" routerLink="/">
-    <h2 class="m-0 text-muted">Ocampo Dental Clinic</h2>
+    <img src="assets/img/brand-logo.png" />
+  </a>
+  <a class="layout-topbar-logo">
+    <img src="assets/img/brand-logo1.png" />
+    <img src="assets/img/brand-logo2.png" />
   </a>
 
   <button
