update pulling of services

--- a/src/app/pages/appointment/schedule/schedule.component.html
+++ b/src/app/pages/appointment/schedule/schedule.component.html
@@ -7,7 +7,7 @@
           <div class="col-12 md:col-12 lg:col-12">
             <h5>Select Service:<span style="color: red">*</span></h5>
           </div>
-          <div class="col-12 md:col-12 lg:col-12">
+          <div class="col-12 md:col-12 lg:col-12" *ngIf="showProduct">
             <div class="card">
               <p-dataView
                 #dv
